--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,27 +1,24 @@
 <mat-toolbar color="primary">
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
+        <mat-icon>add_shopping_cart</mat-icon>
     </button>
-    <span>My App</span>
-    <!-- <mat-menu #menu="matMenu">
-        <button mat-menu-item>
-          <mat-icon>dialpad</mat-icon>
-          <span>Redial</span>
-        </button>
-        <button mat-menu-item disabled>
-          <mat-icon>voicemail</mat-icon>
-          <span>Check voice mail</span>
-        </button>
-        <button mat-menu-item>
-          <mat-icon>notifications_off</mat-icon>
-          <span>Disable alerts</span>
-        </button>
-      </mat-menu> -->
+    <span>Shopping</span>
+    <button mat-button>
+        <mat-icon>home</mat-icon>Home Page
+    </button>
+    <button mat-button>
+        <mat-icon>library_add</mat-icon>Add Product
+    </button>
+    <button mat-button>
+        <mat-icon>credit_card</mat-icon>Payment
+    </button>
+    <button mat-button><mat-icon>shopping_cart</mat-icon>My Basket</button>
+
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
+    <button mat-raised-button>
+        <mat-icon>lock_open</mat-icon> Login
     </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
+    <button mat-raised-button color="accent" >
+        <mat-icon>exit_to_app</mat-icon> Logout
     </button>
-  </mat-toolbar>
+</mat-toolbar>
