--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
     <button mat-button><mat-icon>shopping_cart</mat-icon>My Basket</button>
 
     <span class="example-spacer"></span>
-    <button mat-raised-button>
+    <button mat-raised-button class="mx-2">
         <mat-icon>lock_open</mat-icon> Login
     </button>
     <button mat-raised-button color="accent" >
