--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -52,19 +52,31 @@
         <!-- Weight Column -->
         <ng-container matColumnDef="quantity">
           <th mat-header-cell *matHeaderCellDef> Adet </th>
-          <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="accent">
+              <mat-icon>remove</mat-icon>
+            </button>
+            {{element.quantity}}
+            <button mat-icon-button color="primary">
+              <mat-icon>add</mat-icon>
+            </button>
+          </td>
         </ng-container>
+
 
         <ng-container matColumnDef="sum">
           <th mat-header-cell *matHeaderCellDef> Toplam </th>
-          <td mat-cell *matCellDef="let element"> {{element.product.price*element.quantity | currency:'TRY':'symbol-narrow'}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.product.price*element.quantity |
+            currency:'TRY':'symbol-narrow'}} </td>
         </ng-container>
 
         <!-- Symbol Column -->
         <ng-container matColumnDef="islemler">
           <th mat-header-cell *matHeaderCellDef> Symbol </th>
-          <td mat-cell *matCellDef="let element"> 
-            <button class="btn btn-danger" (click)="deleteBasket(element)">Sil</button>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="accent" (click)="openDialog(element)" >
+              <mat-icon>delete</mat-icon>
+            </button>
           </td>
         </ng-container>
 
@@ -72,8 +84,19 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
 
-
+      <hr>
+      <mat-card class="text-center">
+        <h1 class="text-danger">Toplam: {{total |currency:'TRY':'symbol-narrow' }} </h1>
+      </mat-card>
+      <hr>
+    <div class="text-center">
+      <button mat-raised-button color="primary" >
+        <mat-icon>credit_card</mat-icon>
+        Ödeme Yap 
+      </button>
+    </div>
 
     </div>
+    
   </div>
 </div>
